changed the height of the tablet menu to ensure there is an even distribution of whitespace around links

--- a/style/components/shared/_header.scss
+++ b/style/components/shared/_header.scss
@@ -71,7 +71,7 @@
     overflow: scroll;
 
     @include tablet {
-      height: 50vh;
+      height: 55vh;
       overflow: hidden;
     }
 
@@ -213,7 +213,7 @@
     transition: all 0.4s ease;
 
     @include tablet {
-      top: 15vh;
+      top: 13vh;
     }
 
     @include desktop {
